syntax = "proto3";

package rivet.backend.pkg.party.member_get;

import "proto/common.proto";
import "proto/backend/party.proto";

message Request {
	repeated rivet.common.Uuid user_ids = 1;
}

message Response {
	repeated rivet.backend.party.PartyMember party_members = 1;
}

